--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</section>
-				
+
 				<h2 class="milk_text">Featured Brands</h2>
 
 				<!--/////////// Featured Brands //////////-->
-				<section class="shadow">
+				<section class="shadow" "col 1">
 					<figure>
 						<img src="images/shoes_on_grass.jpg" alt="Photo of shoes in the wet grass">
 						<figcaption>royalty free image from www.sxc.hu</figcaption>
@@ -88,7 +88,7 @@
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 				</section>
 				<!--/////////// Ends Featured Brands //////////-->
-				
+
 				<!--/////////// Archive List //////////-->
 				<section class="shadow">
 					<h2>Shoe Archive</h2>
@@ -135,7 +135,7 @@
 				<!--/////////// End Archive List //////////-->
 
 				<!--/////////// Deals //////////-->
-				<section class="shadow">
+				<section class ="shadow">
 					<figure>
 						<img src="images/lady_bug_shoe.jpg" alt="Pair of Lady Bug Shoes">
 						<figcaption>royalty free image from www.sxc.hu</figcaption>
